docs: patch method updating item quantity
