# src/swagger.yml
@@ -390,21 +390,19 @@ paths:
             $ref: '#/definitions/InvalidToken'
       security:
       - api_key: []
-      
-      
   /order/{order}:
     get:
       tags:
       - order
       summary: fetches an order
       description: Fetches an order related to a user
-      operationId: orderFetchUser
+      operationId: get_this_order
       produces:
       - application/json
       parameters:
       - name: order
         in: path
-        description: ID of the order needs to be updated 
+        description: ID of the order needs to be fetched
         required: true
         type: string
       responses:
@@ -412,14 +410,59 @@ paths:
           description: successful operation
           schema:
             $ref: '#/definitions/Order'
+        404:
+          description: order doesn't exits
+          schema:
+            $ref: '#/definitions/OrderNotFoundError'
+        403:
+          description: access token not provided
+          schema:
+            $ref: '#/definitions/AccessTokenMissing'
+        500:
+          description: invalid token provided
+          schema:
+            $ref: '#/definitions/InvalidToken'
       security:
       - api_key: []
     delete:
       tags:
       - order
       summary: deletes an order
-      description: Deletes an order from database
-      operationId: orderDelete
+      description: Deletes an order from database and increment item quantities
+      operationId: delete_this_order
+      produces:
+      - application/json
+      parameters:
+      - name: order
+        in: path
+        description: ID of the order needs to be deleted
+        required: true
+        type: string
+      responses:
+        200:
+          description: order deleted successfully and returns the new items list
+          schema:
+            $ref: '#/definitions/ItemsList'
+        404:
+          description: order doesn't exist
+          schema:
+            $ref: '#/definitions/OrderNotFoundError'
+        403:
+          description: access token not provided
+          schema:
+            $ref: '#/definitions/AccessTokenMissing'
+        500:
+          description: invalid token provided
+          schema:
+            $ref: '#/definitions/InvalidToken'
+      security:
+      - api_key: []
+    patch:
+      tags:
+      - order
+      summary: updates item quantity in order
+      description: Updates the item quantity of an item inside an order
+      operationId: update_item_quantity
       produces:
       - application/json
       parameters:
@@ -428,13 +471,34 @@ paths:
         description: ID of the order needs to be updated 
         required: true
         type: string
+      - name: body
+        in: body
+        schema:
+          $ref: '#/definitions/PatchingItem'
       responses:
         200:
-          description: successful operation
+          description: item quantity updated
           schema:
             $ref: '#/definitions/Order'
+        404:
+          description: item doesn't exist
+          schema:
+            $ref: '#/definitions/ItemNotFoundError'
+        405:
+          description: order doesn't exist
+          schema:
+            $ref: '#/definitions/OrderNotFoundError'
+        403:
+          description: access token not provided
+          schema:
+            $ref: '#/definitions/AccessTokenMissing'
+        500:
+          description: invalid token provided
+          schema:
+            $ref: '#/definitions/InvalidToken'
       security:
       - api_key: []
+      
     put:
       tags:
       - order
@@ -615,6 +679,12 @@ definitions:
       error:
         type: string
         example: 'Item not found'
+  OrderNotFoundError:
+    type: object
+    properties:
+      error:
+        type: string
+        example: 'Cannot find such order'
 ################################################################################
   User:
     type: object
@@ -689,6 +759,10 @@ definitions:
       __v:
         type: integer
         description: ID number assigned with mongodb. Not to care about
+  ItemsList:
+    type: array
+    items:
+      $ref: '#/definitions/Item'
   OrderList:
     type: array
     items:
@@ -704,6 +778,21 @@ definitions:
         type: string
         description: unique ID of a product
         example: "9X-X5T-ZTK"
+  PatchingItem:
+    type: object
+    properties:
+      productID:
+        type: string
+        description: unique ID of a product
+        example: "9X-X5T-ZTK"
+      quantity:
+        type: integer
+        format: int32
+        example: 13
+      difference:
+        type: integer
+        format: int32
+        example: -2
   ItemInUpdateItems:
     type: object
     properties:
